fixed context menu alignment

--- a/src/container/FileContainer/FileContainer.scss
+++ b/src/container/FileContainer/FileContainer.scss
@@ -1,7 +1,7 @@
 @import '../../style/variables';
 
 .file-container {
-  display: inline-flex;
+  display: inline-block;
   position: relative;
 
   .context-menu {
